Added dynamically changing diagram

--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="sb-admin-2.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 
 </head>
 <body>
@@ -36,6 +36,7 @@
   <div id="details" class="row">
     <h3> Vote! </h3>
   </div>
+  <canvas id="myChart"></canvas>
   <br />
   <h3>Polls:</h3>
   <div id="content" class="row">
